Update a lot, Check description
1) Add Title to (C & P Platform)
2) Better Image Viewing (C & P Platform)
3) Place Your Store Info UI Placement to the btm for (C & P Platform)
4) Validatation before Submit (for C & P Platform) (Havent test yet)

--- a/Tech/Shopper/app/src/main/res/layout/activity_cplatform_create.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_cplatform_create.xml
@@ -123,22 +123,57 @@
                 android:layout_marginBottom="25dp"
                 android:textSize="20sp"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Description:"
-                android:textStyle="bold"
-                android:fontFamily="@font/open_sans_extrabold"
-                android:textSize="12sp"/>
 
-            <EditText
-                android:id="@+id/cplatform_create_description_et"
+            <!-- Parent: Title -->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
-                android:layout_marginBottom="25dp"
-                android:fontFamily="@font/monda_bold"
-                android:hint="Need help with something? Got\ncustomers to refer to others?\nExploring new ways to do business?" />
+                android:orientation="vertical">
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Title:"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/open_sans_extrabold"
+                    android:textSize="12sp"/>
+
+                <EditText
+                    android:id="@+id/cplatform_create_title_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/monda_bold"
+                    android:hint="Set a title" />
+
+            </LinearLayout>
+
+            <!-- Parent: Description -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Description:"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/open_sans_extrabold"
+                    android:textSize="12sp"/>
+
+                <EditText
+                    android:id="@+id/cplatform_create_description_et"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="15sp"
+                    android:fontFamily="@font/monda_bold"
+                    android:hint="Need help with something? Got\ncustomers to refer to others?\nExploring new ways to do business?" />
+
+
+            </LinearLayout>
+
+            <!-- Parent: Upload -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
