--- a/Tech/Shopper/app/src/main/res/layout/activity_cpromotion_view.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_cpromotion_view.xml
@@ -11,6 +11,7 @@
 
     <!-- 90%: Top Part -->
     <ScrollView
+        android:id="@+id/cpromo_view_scroller"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorGrey">
@@ -38,43 +39,87 @@
                     android:layout_height="wrap_content"
                     android:text="Promotion Info:"
                     android:textColor="@color/colorPrimary"
-                    android:fontFamily="@font/open_sans_extrabold"
+                    android:fontFamily="@font/monda_bold"
                     android:textSize="25sp"
                     android:layout_marginBottom="10dp"/>
 
-                <!-- Post Description -->
-                <TextView
-                    android:id="@+id/cpromo_view_postDescription_TV"
+                <!-- Post Title -->
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Looking for..."
-                    android:layout_marginBottom="20dp"/>
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="180dp"
+                        android:layout_height="wrap_content"
+                        android:text="Title:"
+                        android:fontFamily="@font/monda_bold"/>
+
+
+                    <TextView
+                        android:id="@+id/cpromo_view_postTitle_TV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="1 For 1 Free..."
+                        android:fontFamily="@font/monda"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginBottom="20dp"/>
+                </LinearLayout>
+
+
+                <!-- Post Description -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="180dp"
+                        android:layout_height="wrap_content"
+                        android:text="Description:"
+                        android:fontFamily="@font/monda_bold"/>
+
+
+                    <TextView
+                        android:id="@+id/cpromo_view_postDescription_TV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="1 For 1 Free..."
+                        android:fontFamily="@font/monda"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginBottom="20dp"/>
+                </LinearLayout>
+
 
                 <!-- Post Tags -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
 
                     <TextView
                         android:layout_width="180dp"
                         android:layout_height="wrap_content"
-                        android:text="Possible Collaborators:"/>
+                        android:text="Tags:"
+                        android:fontFamily="@font/monda_bold"/>
 
 
                     <TextView
                         android:id="@+id/cpromo_view_postTags_TV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Sports"/>
+                        android:layout_marginStart="10dp"
+                        android:text="Sports"
+                        android:layout_marginBottom="20dp"/>
                 </LinearLayout>
+
 
                 <!-- Post Date -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
 
                     <TextView
@@ -87,7 +132,9 @@
                         android:id="@+id/cpromo_view_promoDate_TV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="dd/mm/yyyy - dd/mm/yyyy"/>
+                        android:text="dd/mm/yyyy - dd/mm/yyyy"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginBottom="20dp"/>
                 </LinearLayout>
             </LinearLayout>
 
@@ -97,6 +144,74 @@
                 android:layout_height="1dp"
                 android:background="@android:color/darker_gray"
                 android:layout_marginVertical="20dp"/>
+
+
+            <!-- Parent: Images -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="10dp"
+                android:fillViewport="true">
+
+
+                <!-- Uploads Header -->
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Images:"
+                    android:textColor="@color/colorPrimary"
+                    android:fontFamily="@font/open_sans_extrabold"
+                    android:textSize="25sp"
+                    android:layout_marginBottom="10dp"/>
+
+                <!-- Images -->
+                <LinearLayout
+                    android:id="@+id/cpromo_view_image_LL"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <!--
+                <androidx.core.widget.NestedScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/cpromo_view_uploads_rv"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:nestedScrollingEnabled="true"
+                        android:paddingTop="8dp"
+                        android:clipToPadding="false"/>
+                </androidx.core.widget.NestedScrollView>
+                -->
+            </LinearLayout>
+
+            <!-- Parent: QR Code -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <!-- Post Header -->
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="QR Code:"
+                    android:textColor="@color/colorPrimary"
+                    android:fontFamily="@font/open_sans_extrabold"
+                    android:textSize="25sp"
+                    android:layout_marginBottom="10dp"/>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:src="@drawable/ic_add_image_black"/>
+
+            </LinearLayout>
+
 
             <!-- Parent: Store -->
             <LinearLayout
@@ -232,63 +347,12 @@
 
             </LinearLayout>
 
-
             <!-- Divider -->
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:background="@android:color/darker_gray"
                 android:layout_marginVertical="20dp"/>
-
-            <!-- Parent: Images -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="10dp"
-                android:fillViewport="true">
-
-
-                <!-- Uploads Header -->
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Images:"
-                    android:textColor="@color/colorPrimary"
-                    android:fontFamily="@font/open_sans_extrabold"
-                    android:textSize="25sp"
-                    android:layout_marginBottom="10dp"/>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/cpromo_view_uploads_rv"
-                    android:layout_width="match_parent"
-                    android:layout_height="500dp"
-                    android:paddingTop="8dp"
-                    android:clipToPadding="false"/>
-            </LinearLayout>
-
-            <!-- Parent: QR Code -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <!-- Post Header -->
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="QR Code:"
-                    android:textColor="@color/colorPrimary"
-                    android:fontFamily="@font/open_sans_extrabold"
-                    android:textSize="25sp"
-                    android:layout_marginBottom="10dp"/>
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:src="@drawable/ic_add_image_black"/>
-
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
