--- a/Tech/Shopper/app/src/main/res/layout/fragment_home.xml
+++ b/Tech/Shopper/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:fontFamily="@font/cabin_semibold"
-            android:text="What's New?"
+            android:text="What's Happening?"
             android:textColor="@color/colorMainColour"
             android:textSize="20dp"
             android:textStyle="bold" />
