--- a/Tech/Shopper/app/src/main/res/layout/fragment_collaboration.xml
+++ b/Tech/Shopper/app/src/main/res/layout/fragment_collaboration.xml
@@ -5,71 +5,9 @@
     tools:context="Fragments.CollaborationFragment"
     android:orientation="vertical">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fragment_collab_rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Collaboration\nPlatform"
-        android:textSize="30sp"
-        android:fontFamily="@font/cabin_semibold"
-        android:textColor="@color/colorMainColour"
-        android:layout_marginVertical="10dp"
-        android:layout_marginHorizontal="10dp"/>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="15dp"
-        android:orientation="vertical"
-        android:background="@color/colorWhite"
-        android:elevation="10dp"
-        >
-
-        <TextView
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Looking For"/>
-
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="15dp"
-        android:orientation="vertical"
-        android:background="@color/colorWhite"
-        android:elevation="10dp"
-        >
-
-        <TextView
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Looking For"/>
-
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="15dp"
-        android:orientation="vertical"
-        android:background="@color/colorWhite"
-        android:elevation="10dp"
-        >
-
-        <TextView
-            android:layout_margin="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Looking For"/>
-
-
-    </LinearLayout>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
