--- a/Tech/Shopper/app/src/main/res/layout/fragment_promotion.xml
+++ b/Tech/Shopper/app/src/main/res/layout/fragment_promotion.xml
@@ -1,15 +1,13 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="Fragments.PromotionFragment">
+    tools:context="Fragments.PromotionFragment"
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fragment_promo_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Promotion"
-        android:textSize="30sp"
-        android:gravity="center_vertical|center_horizontal"/>
+        android:layout_height="match_parent"/>
 
-</FrameLayout>
+</LinearLayout>
