I am suffering ah..

--- a/Tech/Shopper/app/src/main/res/layout/activity_dashboard.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_dashboard.xml
@@ -21,7 +21,8 @@
         android:layout_height="wrap_content"
         android:background="?android:attr/windowBackground"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/menu_nav">
+        app:menu="@menu/menu_nav"
+        app:labelVisibilityMode="labeled">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
