--- a/Tech/Shopper/app/src/main/res/layout/activity_profile_cplatform_view.xml
+++ b/Tech/Shopper/app/src/main/res/layout/activity_profile_cplatform_view.xml
@@ -52,18 +52,21 @@
 
                     <Button
                         android:id="@+id/profile_cplatform_view_delete_btn"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:backgroundTint="@color/colorMainColour"
-                        android:background="@drawable/ic_delete_black"/>
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginRight="10dp"
+                        android:foreground="@drawable/ic_delete_black"
+                        android:foregroundTint="@color/colorMainColour"
+                        android:background="@drawable/hollow_circle"/>
 
                     <Button
                         android:id="@+id/profile_cplatform_view_edit_btn"
                         android:layout_marginLeft="10dp"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:backgroundTint="@color/colorPrimaryDark"
-                        android:background="@drawable/ic_edit_black"/>
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:foreground="@drawable/ic_edit_black"
+                        android:foregroundTint="@color/colorMainColour"
+                        android:background="@drawable/hollow_circle"/>
                 </LinearLayout>
 
                 <!-- Post Title -->
